<resources>
    <string name="app_name" >HappyMusicPlayer</string>
    <string name="sdcard_path" >HappyMusicPlayer</string>
    <string name="all_songs">All Songs</string>
    <string name="recently_added">Recently Added</string>
    <string name="repeat_state">repeatState</string>
    <string name="is_shuffle">isShuffle</string>
    <string name="last_playlist">lastPlayList</string>
    <string name="last_song_played">lastPlayList</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_new">Add New+</string>
    <string name="add_new_playlist">Add new playlist</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="songDurationPlaceHolder">- - : - - / - - : - -</string>
    <string name="playlists">Playlists</string>
    <string name="settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="pref_source_folders">pref_source_folders</string>
    <string name="source_folders">Source Folders</string>
    <string name="use_source_folders">Use Source Folders</string>
    <string name="pref_use_source_folders">pref_use_source_folders</string>
    <string name="themes">Themes</string>
    <string name="pref_themes">pref_themes</string>
    <string name="pref_pause_on_disconnect">pref_pause_on_disconnect</string>
    <string name="pref_use_volume_as_navigation">pref_use_volume_as_navigation</string>
    <string name="song_title">Title</string>
    <string name="song_artist">Artist</string>
    <string name="song_album">Album</string>
    <string name="song_genre">Genre</string>
</resources>
