<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.609"
        android:background="@color/lightgray">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_album" />

    </FrameLayout>


    <EditText
        android:id="@+id/song_details_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.127"
        android:gravity="center"
        android:text="@string/song_title"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        />

    <EditText
        android:id="@+id/song_details_artist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.107"
        android:gravity="center"
        android:text="@string/song_artist"
        android:background="@android:color/transparent"
        android:cursorVisible="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.167"
        android:weightSum="1">

        <EditText
            android:id="@+id/song_details_album"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/song_album"
            android:background="@android:color/transparent"
            android:cursorVisible="false"/>

        <EditText
            android:id="@+id/song_details_genre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/song_genre"
            android:background="@android:color/transparent"
            android:cursorVisible="false"/>

    </LinearLayout>

</LinearLayout>