<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:context=".Activities.MainActivity">


        <ListView
            android:id="@+id/lvCurrentPlayList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.55"
            android:background="@color/colorPrimary"
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/current_playlist_item_bg" />

        <RelativeLayout
            android:id="@+id/playerControlsLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:layout_marginBottom="30dp"
            >

            <TextView
                android:id="@+id/tvSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/trackProgressLayout"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/trackProgressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/mediaPlayerButtons"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <SeekBar
                    android:id="@+id/sbTrackProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="0"
                    android:progressTint="@color/lightBlueHighlight"
                    android:scrollbarSize="16dp"
                    android:thumb="@drawable/seekbar_thumb" />

                <TextView
                    android:id="@+id/tvSongDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/songDurationPlaceHolder"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/mediaPlayerButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnShuffle"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_btn_shuffle_disabled" />

                    <ImageButton
                        android:id="@+id/btnBackward"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_btn_backward" />

                    <ImageButton
                        android:id="@+id/btnPlay"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_btn_play" />

                    <ImageButton
                        android:id="@+id/btnForward"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_btn_forward" />

                    <ImageButton
                        android:id="@+id/btnRepeat"
                        android:layout_width="40dp"
                        android:layout_height="37dp"
                        android:layout_marginStart="10dp"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_btn_repeat_disabled" />
                </LinearLayout>

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:orientation="horizontal">-->


                <!--</LinearLayout>-->


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <!-- The navigation drawer -->
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/filters"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal|bold" />

        <ListView
            android:id="@+id/lvFilters"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:choiceMode="singleChoice"
            android:layout_marginBottom="0dp"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/playlists"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal|bold" />

        <ListView
            android:id="@+id/lvDrawerPlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
